--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "datauri": "^4.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "firebase-admin": "^11.9.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
