--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^5.11.1",
     "yup": "^1.1.1"
   },
