--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.9.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "path": "^0.12.7",
     "sanitize-html": "^2.10.0",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
