--- a/client/.gitignore
+++ b/client/.gitignore
@@ -16,9 +16,9 @@ firebase.json
 /build
 
 # misc
+.env
 .env.production
 # .DS_Store
-# .env
 # .env.local
 # .env.development.local
 # .env.test.local
