--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.11.1",
+    "sanitize-html": "^2.11.0",
+    "socket.io-client": "^4.7.2",
     "yup": "^1.1.1"
   },
   "scripts": {
