--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "prettier": "^2.8.7",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.1"
   }
